syntax = "proto3";
package ova.reason.api;

option go_package = "github.com/ozonva/ova-reason-api/pkg/ova-reason-api;ova_reason_api";

import "google/protobuf/empty.proto";

service ReasonRpc {
  rpc CreateReason (CreateReasonRequest) returns (CreateReasonResponse);
  rpc DescribeReason (DescribeReasonRequest) returns (DescribeReasonResponse);
  rpc ListReasons (google.protobuf.Empty) returns (ListReasonsResponse);
  rpc RemoveReason (RemoveReasonRequest) returns (google.protobuf.Empty);
}

message CreateReasonRequest {
  uint64 userId = 1;
  uint64 actionId = 2;
  string why = 3;
}

message CreateReasonResponse {
  uint64 id = 1;
}

message DescribeReasonRequest {
  uint64 id = 1;
}

message DescribeReasonResponse {
  Reason Reason = 1;
}

message RemoveReasonRequest {
  uint64 id = 1;
}

message ListReasonsResponse {
  repeated Reason items = 1;
}

message Reason {
  uint64 id = 1;
  uint64 userId = 2;
  uint64 actionId = 3;
  string why = 4;
}